# CRYSTAL

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: publish-image.yml
CRYS/: README.md  mcp_servers.json  requirements.txt
CRYS/crys/: __init__.py  __main__.py
CRYS/crystal_code/: __init__.py  __main__.py  background.py  checkpoints.py  cli.py  config_store.py  container_env.py  daemon.py  disposable.py  general_seed.py  guard.py  ingest.py  instructions.py  mcp_hands.py  onboarding.py  project_config.py  recall.py  reflection.py  remote_env.py  runtime.py  sandbox.py  schedule.py  session_registry.py  shell.py  showcase.py  style.py  subagent.py  transcript.py  verify.py
CRYS/runner/: entrypoint.py
CRYS/seeds/: README.md  general_crys_usage.jsonl  general_python_google.jsonl  general_python_pep8.jsonl  general_sql_postgres.jsonl  general_swe_patterns.jsonl  general_testing_pytest.jsonl
deploy/inspector/: Dockerfile  nginx.conf.template
deploy/searxng/: Dockerfile  settings.yml
examples/: memory_quickstart.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CustomerSelector.tsx  ui.tsx
frontend/src/lib/: api.ts  auth.tsx  selected-customer.tsx  types.ts  utils.ts
frontend/src/pages/: Agents.tsx  BankBrowser.tsx  ChatPlayground.tsx  Cognition.tsx  CognitionTracker.tsx  Conflicts.tsx  Critiques.tsx  KnowledgeManager.tsx  Login.tsx  Onboard.tsx  OnboardingSetup.tsx  QueryLog.tsx  SettingsApi.tsx
memory/migrations/: env.py
memory/migrations/versions/: .gitkeep  20260608_1328_81cf707a1672_baseline_schema.py  20260610_1200_b7d4e9f2a1c3_drop_is_current.py  20260611_2050_fbe44d2b9519_agent_tasks_queue.py  20260612_0900_c3a91d7e4f02_agent_tasks_scheduling.py  20260614_1127_aac586863af5_operators_and_hashed_customer_key.py  20260614_1730_b2e7c9a4f1d3_crystal_posix_permissions.py  20260614_2045_d5f1a2b3c4e6_crystal_contributions.py  20260614_2115_e7a2c9d4b1f8_agent_sessions.py  20260615_0100_f2a4c6e8b0d1_citations.py  20260615_0200_b8d2f4a6c0e1_control_plane.py  20260615_0300_c9e3a5b7d1f2_llm_calls.py  20260615_0400_d0f4b6c8e2a3_shard_events.py  20260615_0500_e1a3c5b7d2f4_agent_events.py  20260616_0100_f3b5d7c9e1a4_knowledge_conflicts.py  20260616_0200_a4c6e8b0d2f5_agent_conversations.py  20260617_1900_b5d7e9c1f3a6_conversation_model.py  20260627_0410_c6e8a0b2d4f7_seed_legacy_crystal_types.py  20260702_1800_d7f9b1c3e5a8_web_search_logs.py  20260702_2100_e8a0c2d4f6b9_encrypt_upstream_keys.py  20260703_0230_f9b1d3e5a7c0_document_upload_scope.py  20260703_0310_a1c3e5b7d9f2_groups.py  20260703_0600_b3d5f7a9c1e2_recall_gated_memory.py  20260703_0700_c4e6f8a0b2d3_system_rules.py  20260703_0800_d5f7a9b1c3e4_oauth_states.py  20260703_0900_e6a8b0c2d4f5_task_keys.py  20260703_1000_f7b9c1d3e5a6_subscription_tier.py  20260706_1200_a8b0c2d4e6f7_users.py  (+16 more)
scripts/: bench_qdrant_latency.py  bench_routing_quantization.py  eval_code_descriptions.py  eval_code_descriptions_queries.jsonl  eval_hybrid_rank.py  eval_hybrid_rank_queries.jsonl  init_db.py  longmemeval_harness.py  make_clean_venv.sh  mcp_smoke.py  memory_blend_test_sweep.py  run_code_descriptions_ab.sh  run_routing_quant_bench.sh  smoke_c_series.py  smoke_p3_citations.py
tests/: conftest.py  fakes.py  test_accounts_phase_c.py  test_admin_chat.py  test_admission.py  test_agent_api_session.py  test_agent_citations.py  test_agent_compaction.py  test_agent_cost.py  test_agent_decisiveness.py  test_agent_events.py  test_agent_openai_loop.py  test_agent_preflight.py  test_agent_streaming.py  test_agent_task_cancel.py  test_agent_tool_trimming.py  test_artifacts.py  test_background_worker_write_path.py  test_backlog_read_model.py  test_budget_gate.py  test_caching.py  test_citation_grounding.py  test_citations.py  test_citations_store.py  test_code_comprehension.py  test_code_descriptions.py  test_cognition_agentic.py  test_cognition_amend.py  test_cognition_async.py  test_cognition_context.py  test_cognition_cycles.py  test_cognition_events.py  test_cognition_failfast.py  test_cognition_hygiene.py  test_cognition_revision.py  test_cognition_robustness.py  test_cognition_runs.py  test_cognition_seam.py  test_conflict_resolution.py  test_conflict_retrieval_signal.py  (+124 more)
(+263 files in other folders)
